[package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = ["data-structures", "mathematics", "science"]
description = "Hypergraph is data structure library to create a directed hypergraph in which an hyperedge can join any number of vertices."
edition = "2024"
exclude = [".github", "hypergraph.svg", "rustfmt.toml"]
keywords = ["data-structure", "graph", "hypergraph"]
license = "MIT"
name = "hypergraph"
readme = "README.md"
repository = "https://github.com/yamafaktory/hypergraph"
rust-version = "1.85.0"
version = "2.2.1"

[dependencies]
ahash = "0.8.12"
indexmap = { version = "2.9.0", features = ["rayon"] }
itertools = "0.14.0"
rayon = "1.10.0"
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "performance"
harness = false

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "forbid", priority = -1 }
unreachable_pub = "warn"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
